Add task 5 on homework18